implement reactividad thereads 30tps error 0.5%
